# LineS

./: develop.sh  meson.build  shell.nix
src/: meson.build
src/app/: main.cpp  meson.build
src/app/components/canvas/: canvas.hpp  component.cpp  meson.build
src/app/components/mainwindow/: component.cpp  decl.hpp  mainwindow.hpp  mainwindow.ui  meson.build
src/core/: Cargo.toml  bindings.rs  cbindgen.toml  core.rs  meson.build
subprojects/: meson-cargo.wrap
